Bug 1646799 - setInterval(..., 0) is not clamped, unlike setTimeout(..., 0), r=peterv

Differential Revision: https://phabricator.services.mozilla.com/D84395